5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2563.log
== TEST (2019-06-11 10:52:25) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 4
    while(size(x>1):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:35) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:52:37) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:52:40) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- EXECUTION TIME:
0.656125
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:52:41) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- EXECUTION TIME:
1.70447
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:53:07) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- EXECUTION TIME:
0.58954
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:12) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))

while(size(x)1):
	aprov=0
	for e in x:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	x = array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 4
    while(size(x)1):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:34) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v1):
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 4
    while(size(v1):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:43) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 5
    aprov=0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:53:45) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 5
    aprov=0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:02:36) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 5
    aprov=0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:15) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1):
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- EXECUTION TIME:
0.789014
-- ERROR:
  File "/home/codebench/codes/1800/2563/main.py", line 6
    for e in v
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:16) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1):
	aprov=0
	for e in v
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
File "XXXX", line 6
    for e in v
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:03:24) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:27) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- EXECUTION TIME:
1.0313
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
x: 11
x: 4
x: 1
x:
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
x: 6
x: 0
x: 3
x: 1
x:
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:03:29) 
-- CODE:
from numpy import*
v= array(eval(input("x: ")))

while(size(v)>1):
	aprov=0
	for e in v:
		if(e>=5 and e<7):
			aprov=aprov+1
	print(aprov)
	v= array(eval(input("x: ")))
-- EXECUTION TIME:
1.36628
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
